<resources>
    <string name="app_name">Maimai Data</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <string name="dx_rating_correlation">Rating相关</string>
    <string name="dx_song_list">曲目列表</string>

    <string name="search">搜索</string>
    <string name="shuffle">随机</string>
    <string name="search_history">搜索历史</string>
    <string name="search_hint">输入关键字进行搜索</string>
    <string name="level_ds_select">定数筛选</string>
    <string name="search_level_ds">LEVEL %.1f</string>
    <string name="search_level_string">LEVEL %s</string>
    <string name="song_title">歌曲名</string>
    <string name="level">等级</string>
    <string name="fit_diff">拟合定数</string>
    <string name="sequencing">难度排序</string>
    <string name="version">版本</string>
    <string name="sort">分类</string>
    <string name="favor">收藏的歌曲</string>
    <string name="search_reset">重置选项</string>

    <!--sort-->
    <string name="pop">流行&amp;动漫</string>
    <string name="niconico">niconico &amp; VOCALOID</string>
    <string name="touhou">东方Project</string>
    <string name="game_variety">其他游戏</string>
    <string name="sort_maimai">舞萌</string>
    <string name="ongeki_chuni">音击&amp;中二节奏</string>
    <string name="utage">宴·会·场</string>

    <!--version-->
    <string name="maimai">maimai</string>
    <string name="maimai_plus">maimai PLUS</string>
    <string name="green">GreeN</string>
    <string name="green_plus">GreeN PLUS</string>
    <string name="orange">ORANGE</string>
    <string name="orange_plus">ORANGE PLUS</string>
    <string name="pink">PiNK</string>
    <string name="pink_plus">PiNK PLUS</string>
    <string name="murasaki">MURASAKi</string>
    <string name="murasaki_plus">MURASAKi PLUS</string>
    <string name="milk">MiLK</string>
    <string name="milk_plus">MiLK PLUS</string>
    <string name="finale">FiNALE</string>
    <string name="dx">舞萌DX</string>
    <string name="dx2021">舞萌DX 2021</string>
    <string name="dx2022">舞萌DX 2022</string>
    <string name="dx2023">舞萌DX 2023</string>
    <string name="dx2024">舞萌DX 2024</string>
    <string name="dx2025">舞萌DX 2025</string>

    <string name="song_alias">歌曲别名</string>
    <string name="artist">ARTIST</string>
    <string name="bpm">BPM</string>
    <string name="genre">歌曲分类</string>
    <string name="add_version">添加版本</string>

    <string name="wait_dialog">少女祈祷中…</string>

    <string name="maimai_achievement_format">%.2f%%</string>
    <string name="maimaidx_achievement_desc">%.4f%%</string>
    <string name="maimaidx_dx_score_desc">%d/%d</string>
    <string name="design">谱面作者</string>
    <string name="status">达成状态</string>
    <string name="dx_score">DX分数</string>
    <string name="play_count">游玩次数</string>
    <string name="no_record">暂无成绩</string>
    <string name="no_record_tips">尚未游玩过当前难度的谱面，或者你需要更新本地数据库</string>
    <string name="song_find_dialog_title">如何找到这首歌</string>
    <string name="song_find_dialog_content">选择按%s分类-按%s排序，在%s中选择%s难度后，找到%s第%d首歌</string>
    <string name="song_find_fronted">正序</string>
    <string name="song_find_reversed">逆序</string>
    <string name="inner_level_up">%.1f↑</string>
    <string name="inner_level_down">%.1f↓</string>
    <string name="inner_level_old">(%.1f)</string>

    <string name="share_image">分享图片</string>
    <string name="share_image_error">分享图片准备失败</string>
    <string name="save_image">保存图片</string>
    <string name="download_image_error">下载图片失败</string>
    <string name="image_generation_error">图片生成失败</string>
    <string name="storage_permission_denied">保存失败，没有获取储存权限</string>
    <string name="file_saved_to_path">文件已保存至%1$s目录</string>

    <string name="total">TOTAL</string>
    <string name="tap">TAP</string>
    <string name="hold">HOLD</string>
    <string name="slide">SLIDE</string>
    <string name="_break">BREAK</string>
    <string name="touch">TOUCH</string>

    <string name="finale_full_achievement">FiNALE理论值</string>
    <string name="copy_song_name_success">复制歌曲名成功</string>

    <string name="perfect">PERFECT</string>
    <string name="great">GREAT</string>
    <string name="good">GOOD</string>
    <string name="miss">MISS</string>
    <string name="down50">50落</string>
    <string name="down100">100落</string>
    <string name="low_dxstar_score">最低DX分数</string>

    <string name="rating_sheet">RANK 系数表</string>
    <string name="maimaidx_prober">舞萌DX查分器</string>
    <string name="current_user">你好</string>
    <string name="rank">RANK</string>
    <string name="achievement">达成率</string>
    <string name="coefficient">系数</string>
    <string name="rate">倍率(达成率*系数)</string>

    <string name="best50">Best50</string>
    <string name="old_version_35">历史版本：%d</string>
    <string name="new_version_15">现行版本：%d</string>
    <string name="rating_scope">%d/%d</string>
    <string name="best50_empty">当前Best50为空</string>
    <string name="best50_create_dialog">Best50创建中 %s</string>

    <string name="song_level">歌曲定数</string>
    <string name="target_rating">目标rating</string>
    <string name="single_rating">单曲rating</string>
    <string name="total_rating">合计rating</string>
    <string name="calculate">计算</string>
    <string name="version_query">版本进度</string>
    <string name="level_query">等级进度</string>
    <string name="genre_query">分类进度</string>
    <string name="version_clear_query">霸者进度</string>
    <string name="switch_display">切换显示</string>
    <string name="name_plate_achieved">%d/%d</string>

    <string name="maimai_data_update_title">新版本：%s</string>
    <string name="maimai_data_update_default_content">BUG修复</string>
    <string name="maimai_data_version_skip">跳过本版本</string>
    <string name="maimai_data_update_download">下载</string>
    <string name="maimai_data_data_update_title">数据更新</string>
    <string name="maimai_data_data_update_info">本地数据版本:%s，检测到数据版本:%s，需要现在更新吗？</string>
    <string name="maimai_data_download_title">正在下载</string>
    <string name="maimai_data_start_download">开始下载</string>
    <string name="maimai_data_download_error">下载出错，请重新下载</string>
    <string name="maimai_data_apk_check">正在检查版本</string>
    <string name="maimai_data_data_check">正在检查数据版本</string>
    <string name="maimai_data_chart_stats_check">正在检查拟合定数版本</string>
    <string name="maimai_data_chart_alias_check">正在检查别名库版本</string>
    <string name="maimai_data_check_error">检查失败</string>

    <string name="update_prober">数据录入</string>
    <string name="update_prober_api_user_id_bind">绑定账号</string>
    <string name="update_prober_stop_proxy">关闭代理</string>
    <string name="update_prober_disable">服务器维护中，无法录入数据</string>

    <string name="prober_update_api_warning_title">⚠不安全的功能⚠</string>
    <string name="prober_update_api_warning_content">使用本功能将使开发者可以获取到你的 UserID，并可能导致账号被封禁等后果。我们将不为此功能导致的任何后果负责，开启此功能视为同意以上内容。</string>
    <string name="prober_update_api_warning_wait_button">我已知悉（%ds）</string>
    <string name="prober_update_api_warning_ok_button">无视风险继续启用</string>
    <string name="clear_user_id_waring_content">是否清除 UserID，清除后需要重新进行绑定流程。</string>

    <string name="prober_update_help">数据录入帮助</string>
    <string name="prober_update_content_step1">①.打开“数据录入”，App会自动打开代理（第一次使用请同意VPN创建请求）、复制链接、跳转微信</string>
    <string name="prober_update_content_step2">②.在微信中将复制的链接发送至聊天窗口（如文件传输助手）</string>
    <string name="prober_update_content_step3">③.点击发送的链接，等待网页提示“登录信息以获取”后，即可关闭页面返回App</string>
    <string name="prober_update_content_step4">④.App开始获取分数信息，并根据设置中的难度选择将对应难度的成绩载入数据库</string>

    <string name="prober_update_api_user_id_bind_help">绑定账号帮助</string>
    <string name="prober_update_api_user_id_bind_content_step1">①.打开“绑定账号”，App会自动打开代理（第一次使用请同意VPN创建请求）、跳转微信</string>
    <string name="prober_update_api_user_id_bind_content_step2">②.在微信中打开公众号舞萌/中二后，点击玩家二维码</string>
    <string name="prober_update_api_user_id_bind_content_step3">③.打开新获取的玩家二维码，等待网页提示“登录信息以获取”后，即可关闭页面返回App</string>
    <string name="prober_update_api_user_id_bind_content_step4">④.App开始尝试绑定账号，等待“数据录入”重新出现</string>

    <string name="prober_update_api_help_content_step1">①.点击“数据录入”，等待数据加载</string>

    <string name="prober_update_disable_help">为什么不能录入</string>
    <string name="prober_update_disable_content">舞萌服务器及公众号正在维护，目前无获取数据手段，因此不能录入新的数据</string>

    <string name="about">关于</string>
    <string name="local_data_version">本地数据版本</string>
    <string name="fit_diff_update_date">拟合定数更新日期</string>
    <string name="alias_update_date">别名库更新日期</string>
    <string name="project_url">项目地址</string>
    <string name="feedback">建议和反馈</string>

    <string name="settings">设置</string>
    <string name="settings_enable_show_alias">启用别名显示</string>
    <string name="settings_enable_alias_search">启用别名搜索</string>
    <string name="settings_enable_charter_search">启用谱师搜索</string>
    <string name="settings_version_check_skip_song">版本进度忽略删除曲</string>
    <string name="settings_song_find_disable_rank">歌曲定位不依赖用户数据</string>
    <string name="settings_prober_update_use_api">数据录入使用API</string>
    <string name="settings_clear_user_id">清除UserID</string>
    <string name="settings_clear_user_id_bind">已绑定</string>
    <string name="settings_clear_user_id_not_bind">未绑定</string>
    <string name="settings_image_url_use_cn">歌曲封面使用华立源</string>

    <string name="song_id">歌曲ID</string>
    <string name="settings_nickname">全局用户昵称</string>
    <string name="settings_nickname_dialog_title">请输入昵称</string>
    <string name="settings_update_difficulty">选择载入数据库难度</string>
    <string name="settings_difficulty_pick">选择难度</string>

    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
    <string name="left_arrow">◀</string>
    <string name="right_arrow">▶</string>
</resources>